# TEST

./: README-HOTFIX.md  README.md  README_HOTFIX.md  README_MODELS_PACK.md  README_PATCH.txt  README_WF_HPO_COMPARE.md  ROOT_README_STATUS.md  ROOT_STATUS_LOCK.md  example_bars.csv  main_hotfix.py  pyproject.toml  requirements.txt  run_backtest.py  run_demo.py  sitecustomize.py  streamlit_app.py
src/: README.md  __init__.py  data_quality.py  pyproject.toml  requirements.txt  run_backtest.py  streamlit_app.py  verification.py
src/analytics/: reporting.py  rich_report.py
src/anomaly/: __init__.py  alert_handler.py  detector.py  threshold.py
src/autonom_ed/: __init__.py  run_backtest.py  run_walkforward.py
src/autonom_trading.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/backtest/: analyzers.py  broker_virtual.py  metrics.py  monte_carlo.py  residuals.py  risk_execution_adapter.py  simulator.py  simulator_with_risk.py  slippage.py  vectorized.py  walkforward.py  wf_engine.py  wf_runner.py
src/backtesting/: adapter.py  walk_forward.py
src/config/: config.py  exchanges.yaml  features.yaml  settings.py  symbols_map.yaml
src/configs/: config_dataclasses.py  config_loader.py  main_config.py  main_config.yaml
src/core/: __init__.py  ai_wrappers.py  backtest.py  backtest_engine.py  config.py  data_normalizer.py  data_pipeline.py  enhanced_risk_engine.py  event_bus.py  events.py  market_regime_detector.py  metrics.py  performance.py  pipeline.py  risk.py  risk_chain.py  settings.py  strategy_factory.py  strategy_framework.py  strategy_registry.py  threshold_strategy.py
src/data/: corporate_actions.py  loader.py  multi_source.py  normalizer.py  validation.py
src/data_layer/: indicators.py  normalizer.py  quality.py  replayer.py  storage.py
(+438 files in other folders)
