[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "autonom-trading"
version = "2.9.13"
requires-python = ">=3.9"
dependencies = ["numpy>=1.24","pandas>=2.0","scikit-learn>=1.2","yfinance>=0.2.40","streamlit>=1.31"]
[tool.setuptools]
package-dir = {"" = "src"}
[tool.setuptools.packages.find]
where = ["src"]
