[tool.poetry]
name = "autonom-ed"
version = "2.9.3"
description = "Event-driven backtesting & research framework with walk-forward and AI registry"
authors = ["You <you@example.com>"]
readme = "README.md"
packages = [{include = "autonom_ed"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
pandas = "^2.2.2"
numpy = "^1.26.4"
yfinance = "^0.2.40"
scikit-learn = "^1.3.2"
lightgbm = {version = "^4.3.0", optional = true}
xgboost = {version = "^2.0.3", optional = true}
catboost = {version = "^1.2.5", optional = true}
matplotlib = "^3.8.4"
tqdm = "^4.66.4"
joblib = "^1.4.2"
plotly = "^5.22.0"
streamlit = "^1.36.0"
pyyaml = "^6.0.2"

[tool.poetry.extras]
full = ["lightgbm","xgboost","catboost"]

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
ruff = "^0.5.0"

[tool.ruff]
line-length = 100
